# qstorm

./: Cargo.toml
example_configs/: elastic.yaml  opensearch.yaml  pgvector.yaml  qdrant.yaml
src/: config.rs  error.rs  lib.rs  metrics.rs  provider.rs  queries.rs  runner.rs  types.rs
src/embedder/: fastembed.rs  mod.rs  openai.rs
src/providers/: elastic.rs  mod.rs  opensearch.rs  pgvector.rs  qdrant.rs
