[package]
name = "qstorm"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Nathan Leroy"]
description = "A benchmarking tool for vector search engines"

[lib]
name = "qstorm"
path = "src/lib.rs"

[[bin]]
name = "qstorm"
path = "src/bin/qstorm/main.rs"

[features]
default = ["elasticsearch", "qdrant", "pgvector"]
elasticsearch = ["dep:elasticsearch"]
qdrant = ["dep:qdrant-client"]
embeddings = ["dep:fastembed"]
openai-embeddings = ["dep:async-openai", "dep:indicatif"]
pgvector = ["dep:sqlx", "dep:pgvector"]
all-providers = ["elasticsearch", "qdrant", "pgvector"]

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }
hdrhistogram = "7"

async-trait = "0.1"
futures = "0.3"

# provider sdks (optional)
elasticsearch = { version = "9.1.0-alpha.1", optional = true }
qdrant-client = { version = "1.16.0", optional = true }

# pgvector (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

# embeddings (optional)
fastembed = { version = "4", optional = true }
async-openai = { version = "0.27", optional = true }
indicatif = { version = "0.17", optional = true }

# cli dependencies
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
